refactor: migrate build tool to gradle and JDK 11